implementation_level/k8s/mail-pipeline/parser/parser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parser
spec:
  replicas: 1
  selector:
    matchLabels:
      type: parser-type
  template:
    metadata:
      labels:
        type: parser-type
    spec:
      containers:
        - name: parser
          image: giovaz94/mail-pipeline-general
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: parser-service
  labels:
    type: parser-service-service-type
  annotations:
      prometheus.io/scrape: "true"
      prometheus.io/port: "80"
      prometheus.io/path: "/metrics"   # optional, defaults to /metrics
spec:
  selector:
    type: parser-type
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: parser-service
spec:
  host: parser-service
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: parser-service
spec:
  hosts:
    - parser-service
  http:
    - route:
        - destination:
            host: parser-service
